src/objects/D2DSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Allow_Lead_Creation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Lead Creation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_Approval_Required__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Credit Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_Check_Url__c</fullName>
        <description>Url of the site used for credit checks</description>
        <label>Credit Check Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>D2D_Site_Url__c</fullName>
        <label>D2D Site Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>DocuSign_Account_Id__c</fullName>
        <label>DocuSign Account Id</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocuSign_Host__c</fullName>
        <label>DocuSign Host</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocuSign_Integrators_Key__c</fullName>
        <label>DocuSign Integrators Key</label>
        <length>42</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocuSign_Password__c</fullName>
        <label>DocuSign Password</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocuSign_Service_Url__c</fullName>
        <label>DocuSign Service Url</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocuSign_User_Id__c</fullName>
        <label>DocuSign User Id</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Coordinator__c</fullName>
        <description>The email address of the sales coordinator who receives notification of newly uploaded leads and can assign them to D2D managers.</description>
        <inlineHelpText>The email address of the sales coordinator who receives notification of newly uploaded leads and can assign them to D2D managers.</inlineHelpText>
        <label>Sales Coordinator</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Owner__c</fullName>
        <label>Sales Order Owner</label>
        <type>Email</type>
    </fields>
    <label>D2DSettings</label>
</CustomObject>